# nba-proj

./: .gitignore  README.md  app.py  nba_prediction_project_plan.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/processed/: backtest_predictions.parquet  games.parquet
docs/: betting.md  learnings.md  results.md
scripts/: backtest_predictions.py  betting_report.py  calibration_report.py  results_table.py  shap_report.py
src/nba_pred/: __init__.py
src/nba_pred/eval/: backtest.py  betting.py  metrics.py
src/nba_pred/features/: __init__.py  build.py  elo.py  form.py  rest.py  roster.py
src/nba_pred/ingest/: __init__.py  games.py  odds.py  players.py
src/nba_pred/models/: calibration.py  features.py  logistic.py  xgb.py
src/nba_pred/serve/: __init__.py  predictor.py
tests/: test_backtest.py  test_betting.py  test_calibration.py  test_elo.py  test_features.py  test_leakage.py  test_models_smoke.py  test_predictor.py  test_roster.py
