[project]
name = "nba-pred"
version = "0.1.0"
description = "Leakage-safe, calibrated NBA win-probability prediction system"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Data acquisition
    "nba_api>=1.4",
    # Data wrangling
    "pandas>=2.2",
    "pyarrow>=16",          # parquet engine
    "numpy>=1.26",
    # Modeling
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    # Eval
    "matplotlib>=3.9",
]

[project.optional-dependencies]
# Explainability (Phase 3) — kept separate so its heavy numba/llvmlite stack
# doesn't constrain the core training environment.
explain = [
    "shap>=0.46",
    "numba>=0.60",
    "llvmlite>=0.43",
]
# Frontend (Streamlit app).
app = [
    "streamlit>=1.38",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nba_pred"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
